feat(web): set up web app
- chainStorageWatcher, querying brands, vaults, and quotes from rpc
- react hooks for vstorage state managed in react context
- tailwindcss configurations and styles
- react-router routing

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,69 +1,32 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+:root {
+  /* Refer to https://tailwindcss.com/docs/customizing-colors#using-css-variables */
+  --color-primary: 72, 72, 72;
+  --color-secondary: 163, 165, 185;
+  --color-alternative: 102, 105, 128;
+  --color-alert: 226, 41, 81;
+  --inter-yellow: 255, 216, 26;
+  --inter-yellow-2: 255, 251, 229;
+  --inter-yellow-3: 255, 242, 179;
+  --inter-yellow-4: 255, 233, 128;
+  --inter-yellow-5: 255, 225, 77;
+  --inter-yellow-7: 230, 190, 0;
+  --inter-yellow-8: 179, 148, 0;
+  --inter-orange: 255, 122, 26;
+  --inter-orange-alt: 255,166,13;
+  --inter-purple: 183, 135, 245;
+  --inter-green: 0, 177, 166;
+  --color-disabled: 193, 195, 215;
+  --color-white: 255, 255, 255;
+  
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
